[package]
name = "dht11-22_pi"
version = "0.1.0"
authors = ["Michael Fletcher <m.fletcher@theplanet.ca>", "Tobias Nienhaus <me@tobiasnienhaus.me>"]
description = "Rust API to obtain temperature and humidity measurements from a DHT22 or a DHT11 connected to a Raspberry Pi."
license = "MIT"
#documentation = "https://docs.rs/dht22_pi/"
repository = "https://github.com/TobiasNienhaus/dht22_pi"
categories = ["hardware-support"]
keywords = ["pi", "dht22", "dht11", "temperature"]
edition = "2018"

[dependencies]
rppal = "0.11.3"
libc = "0.2.21"
